# low_power_sensor_esp32c

./: CMakeLists.txt  Kconfig  Kconfig.lp_hp_shared  README.md  README.rst  app.overlay  lp_hp_shared.conf  prj.conf  sample.yaml  sysbuild.cmake  zephyr_mbox_esp32.patch
include/: lps_dhcp.h  lps_shared.h  lps_transport.h  lps_wifi.h  shared_data.h
lpcore_image/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
lpcore_image/src/: aht20.c  main.c
snippets/thread-mqttsn/: snippet.yml  thread-mqttsn.conf  thread-mqttsn.overlay
snippets/wifi-mqtt/: snippet.yml  wifi-mqtt.conf
src/: lp_firmware.S  lps_dhcp.c  lps_mqtt-sn_client.c  lps_mqtt_client.c  lps_shared.c  lps_thread-mqtt-sn_client.c  lps_wifi-mqtt_client.c  lps_wifi.c  main.c
src/test/: lps_mqtt_client.c
